feat: Add time stamp to sidebare chat

--- a/src/Styles/_compiled/mentor.css
+++ b/src/Styles/_compiled/mentor.css
@@ -33,6 +33,7 @@
 .chat-item:hover {
   color: #fff !important;
   background-color: #0f9ed5 !important;
+  border-bottom: 1px solid #0f9ed5;
 }
 .chat-item:hover p:nth-child(2) {
   color: #fff;
