--- a/src/Styles/_components/mentor-chat.scss
+++ b/src/Styles/_components/mentor-chat.scss
@@ -199,6 +199,7 @@
 
 .current-chat {
     background-color: $mercy-color-1 !important;
+    border-bottom: 1px solid $mercy-color-1;
     color: #fff;
 }
 
