--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -868,9 +868,9 @@ textarea[data-info=content] {
 .send-chat {
   display: flex;
   align-items: center;
-  margin: 0 auto;
-  padding: 0 2rem;
-  width: 90% !important;
+  margin: 0;
+  padding: 0;
+  width: 100% !important;
 }
 .send-chat-input {
   width: 100% !important;
@@ -1035,6 +1035,18 @@ textarea[data-info=content] {
 .sidebar-lastchat-date {
   margin-left: 3rem;
   font-size: 1.2rem !important;
+}
+
+.send-chat-extra-icon {
+  width: 5rem;
+  height: 5rem;
+  padding: 0rem;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.send-chat-extra-icon-schedule {
+  margin-right: 1rem !important;
 }
 
 @media screen and (max-width: 1000px) {
