feat: Add time stamp to sidebare chat

--- a/src/Styles/_compiled/mentor-chat.css
+++ b/src/Styles/_compiled/mentor-chat.css
@@ -242,11 +242,12 @@
 .send-chat-extra-icon {
   width: 5rem;
   height: 5rem;
-  padding: 0rem;
+  padding: 0.5rem;
   object-fit: cover;
   cursor: pointer;
 }
 
 .send-chat-extra-icon-schedule {
-  margin-right: 1rem !important;
+  margin-right: 1.5rem !important;
+  padding: 0rem !important;
 }
