--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -1040,13 +1040,14 @@ textarea[data-info=content] {
 .send-chat-extra-icon {
   width: 5rem;
   height: 5rem;
-  padding: 0rem;
+  padding: 0.5rem;
   object-fit: cover;
   cursor: pointer;
 }
 
 .send-chat-extra-icon-schedule {
-  margin-right: 1rem !important;
+  margin-right: 1.5rem !important;
+  padding: 0rem !important;
 }
 
 @media screen and (max-width: 1000px) {
