--- a/src/Styles/_compiled/mentor-chat.css
+++ b/src/Styles/_compiled/mentor-chat.css
@@ -251,3 +251,8 @@
   margin-right: 1.5rem !important;
   padding: 0rem !important;
 }
+
+.send-chat-extra-icon-emoji {
+  width: 4rem;
+  height: 4rem;
+}
