--- a/src/Styles/_components/mentor-chat.scss
+++ b/src/Styles/_components/mentor-chat.scss
@@ -234,3 +234,8 @@
     margin-right: 1.5rem !important;
     padding: 0rem !important;
 }
+
+.send-chat-extra-icon-emoji {
+    width: 4rem;
+    height: 4rem;
+}
