feat: Add time stamp to sidebare chat

--- a/src/Styles/_compiled/mentor-chat.css
+++ b/src/Styles/_compiled/mentor-chat.css
@@ -250,6 +250,8 @@
 .send-chat-extra-icon-schedule {
   margin-right: 1.5rem !important;
   padding: 0rem !important;
+  width: 3rem;
+  height: 3rem;
 }
 
 .send-chat-extra-icon-emoji {
