--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -1048,6 +1048,8 @@ textarea[data-info=content] {
 .send-chat-extra-icon-schedule {
   margin-right: 1.5rem !important;
   padding: 0rem !important;
+  width: 3rem;
+  height: 3rem;
 }
 
 .send-chat-extra-icon-emoji {
