--- a/src/Styles/_components/mentor-chat.scss
+++ b/src/Styles/_components/mentor-chat.scss
@@ -47,6 +47,7 @@
     background-color: #fafafa;
     border: 1px solid #fafafa !important;
     padding: 2rem 2rem 1rem 2rem;
+    position: relative;
     div {
         width: 100%;
     }
@@ -240,4 +241,14 @@
 .send-chat-extra-icon-emoji {
     width: 4rem;
     height: 4rem;
+}
+
+.calender-schedule-modal {
+    max-width: 50rem;
+    position: absolute;
+    height: fit-content;
+    top: -350%;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
