--- a/src/Styles/_components/mentor-chat.scss
+++ b/src/Styles/_components/mentor-chat.scss
@@ -20,6 +20,15 @@
 }
 .mentors-chat-item-header {
     background-color: #fff;
+    &-main {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        .row {
+            padding: 2rem 2rem 1rem 2rem;
+        }
+    }
     .row {
         padding: 2rem 2rem 1rem 2rem;
     }
