--- a/src/Styles/_components/mentor-chat.scss
+++ b/src/Styles/_components/mentor-chat.scss
@@ -201,6 +201,7 @@
 .chat-icons {
   width: 2.5rem;
   height: 2.5rem;
+  cursor: pointer;
   @include transition;
   &:hover {
     filter: invert(53%) sepia(83%) saturate(1525%) hue-rotate(161deg) brightness(87%) contrast(92%);
@@ -265,4 +266,8 @@
 .instructions {
     border-left: 2px solid #d0cccc;
     color: #000;
+}
+
+.search-chats-container {
+    transition: 350ms ease-out;
 }
